# samosbor

./: .gitignore  README.md  pyproject.toml  requirements-tbank.txt
configs/: local_pack_cnyrubf_ta_aggressive.toml  local_pack_cnyrubf_ta_candidate.toml  local_pack_cnyrubf_ta_walk_forward.toml  local_pack_fx_index_ta_aggressive.toml  local_pack_research.toml  local_pack_server_multi_300k.toml  local_pack_server_multi_300k_focused.toml  local_pack_server_pair_cny_usd_candidate.toml  local_pack_stocks_intraday_300k.toml  local_pack_stocks_intraday_300k_focused.toml  local_pack_ta_research.toml  local_pack_usdrubf_candidate.toml  paper.toml  server_tbank_cnyrubf_premium.toml  server_tbank_stocks_intraday_300k.toml  server_tbank_stocks_intraday_300k_focused.toml
deploy/systemd/: samosbor-daily-review.service  samosbor-daily-review.timer  samosbor-dashboard.service  samosbor-paper-cycle.service  samosbor-paper-cycle.timer  samosbor-updater.service  samosbor-updater.timer
docs/: architecture.md
tests/: test_backtest.py  test_dashboard.py  test_effective_config.py  test_entry_quality_tuning.py  test_exit_tuning.py  test_futures_margin.py  test_monte_carlo.py  test_nightly_autonomy.py  test_offline_parquet_cache.py  test_optimizer.py  test_paper_autonomy.py  test_paper_broker.py  test_paper_cycle.py  test_parquet_directory_provider.py  test_risk_manager.py  test_safety.py  test_server_autonomy_config.py  test_signal_feedback.py  test_strategy_ta.py  test_strategy_tuning.py  test_universe_selection.py  test_update_offline_parquet_cache.py  test_walk_forward.py
(+57 files in other folders)
