[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samosbor"
version = "0.1.0"
description = "Paper-trading system for MOEX with T-Bank Invest API integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=3.0",
  "pyarrow>=24.0",
  "pandas-ta>=0.4.71b0",
]

[project.scripts]
samosbor = "samosbor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
